--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <script src=" https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="scripts/script.js"></script>
     <title>Document</title>
 </head>
 <body>
     <nav class="nav">
         <div class="container">
         <div class="nav-text">
+            <div class="selectlink"> 
+                <div class="selectlink-control">Галерея</div>
+                <ul>
+                    <li><a href="https://shared-21066401-155309.pleskbox.com/">Исачев</a></li>
+                    <li><a href="https://shared-21066401-155309.pleskbox.com/pressa-ob-isachive/">Полицкий</a></li>
+                </ul>
+            </div>
             <a href="https://shared-21066401-155309.pleskbox.com/">Главная</a>
             <a href="https://shared-21066401-155309.pleskbox.com/pressa-ob-isachive/">Пресса</a>
             <a href="https://shared-21066401-155309.pleskbox.com/pressa-ob-isachive/">Каталоги</a>
